--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,4 +3,21 @@
 body{
     font-family: 'Lato', sans-serif;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: whitesmoke;
+}
+
+#content{
+    background-color: lightgray;
+    margin-left: 300px;
+    margin-right: 300px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    border: 1px solid black;
+    border-radius: 5px;
 }
